--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    
+    implementation 'com.clevertap.android:clevertap-android-sdk:4.1.1'
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
+    implementation 'androidx.core:core:1.3.0'
+    //Mandatory for CleverTap Android SDK v3.6.4 and above add the following -
+    implementation 'com.android.installreferrer:installreferrer:2.1'
+
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')
 }
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
