--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -48,8 +49,9 @@ dependencies {
     implementation 'androidx.core:core:1.3.0'
     //Mandatory for CleverTap Android SDK v3.6.4 and above add the following -
     implementation 'com.android.installreferrer:installreferrer:2.1'
-
+    implementation "androidx.cardview:cardview:1.0.0"
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-android-extensions'
