--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -51,6 +51,20 @@ dependencies {
     implementation 'com.android.installreferrer:installreferrer:2.1'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
+
+    //MANDATORY for App Inbox
+    implementation 'com.android.support:multidex:1.0.3'
+
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    //Optional ExoPlayer Libraries for Audio/Video Inbox Messages. Audio/Video messages will be dropped without these dependencies
+
+        implementation 'com.google.android.exoplayer:exoplayer:2.11.5'
+        implementation 'com.google.android.exoplayer:exoplayer-hls:2.11.5'
+        implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.5'
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
